Updated DCS Processing
